요세인조화

--- a/youseijinchouge/1/index.html
+++ b/youseijinchouge/1/index.html
@@ -40,7 +40,7 @@
                           <a class="series_title" href="..">【連載】妖世刃弔華</a>
                         </div>
                       </div>
-                      <section class="cover" style="background-image:url(../yosei_logo_fix.jpg)">
+                      <section class="cover" style="background-image:url(/saoow.github.io/youseijinchouge/yosei_logo_fix.jpg)">
                         <div class="header is-covered">
                           <h2 class="title">【連載】妖世刃弔華</h2>
                           <div class="share_wrapper">
@@ -216,7 +216,7 @@
                           <p id="p147">「ただ、斬る――――！」</p>
                           <p id="p149">　ひとたび刀を抜いたことで、妖夢の意識は完全に切り替わっていた。</p>
                           <p id="p150">
-                            <img class="alignnone size-medium wp-image-1214" src="../illust_gallery/jinchoge_sashie1.jpg" alt="" width="734" height="1024" sizes="(max-width: 734px) 100vw, 734px">
+                            <img class="alignnone size-medium wp-image-1214" src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie1.jpg" alt="" width="734" height="1024" sizes="(max-width: 734px) 100vw, 734px">
                           </p>
                           <p id="p150">　意識に刻み込まれている「斬って知る」というフレーズを脳内で連呼することで、湧き上がってくる未知の存在への恐怖心を見ないようにしているのだ。</p>
                           <p id="p151">　ある意味、暗示のようなものだが、それでちゃんと動くことができるのだからたいしたものである。</p>
@@ -259,7 +259,7 @@
                         <div class="illust_gallery">
                           <div class="illust">
                             <a href="1">
-                              <img src="../illust_gallery/jinchoge_sashie1.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie1.jpg">
                             </a>
                           </div>
                         </div>
@@ -269,7 +269,7 @@
                           <p class="role">著者</p>
                           <div class="flex">
                             <div class="left">
-                              <img src="../1570093300351.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/1570093300351.jpg">
                             </div>
                             <div class="right">
                               <h4>草薙刃</h4>
@@ -297,7 +297,7 @@
                           <p class="role">絵</p>
                           <div class="flex">
                             <div class="left">
-                              <img src="../e9c1544d692a16930cb2fbcdf6935b61.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/e9c1544d692a16930cb2fbcdf6935b61.jpg">
                             </div>
                             <div class="right">
                               <h4>こぞう</h4>
