--- a/youseijinchouge/index.html
+++ b/youseijinchouge/index.html
@@ -454,117 +454,117 @@
                         <div class="illust_gallery">
                           <div class="illust">
                             <a href="1/1">
-                              <img src="illust_gallery/jinchoge_sashie1.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie1.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="3/1">
-                              <img src="illust_gallery/jinchoge_sashie2.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie2.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="5/1">
-                              <img src="illust_gallery/jinchoge_sashie3.png">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie3.png">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="7/1">
-                              <img src="illust_gallery/jinchoge_sashie4.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie4.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="9/1">
-                              <img src="illust_gallery/jinchoge_sashie5.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie5.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="11/1">
-                              <img src="illust_gallery/jinchoge_sashie6.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie6.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="13/1">
-                              <img src="illust_gallery/jinchoge_sashie7.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie7.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="15/1">
-                              <img src="illust_gallery/jinchoge_sashie8.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie8.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="17/1">
-                              <img src="illust_gallery/jinchoge_sashie9.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie9.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="19/1">
-                              <img src="illust_gallery/jinchoge_sashie10.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie10.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="21/1">
-                              <img src="illust_gallery/jinchoge_sashie11.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie11.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="23/1">
-                              <img src="illust_gallery/jinchoge_sashie12.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie12.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="25/1">
-                              <img src="illust_gallery/jinchoge_sashie13.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie13.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="27/1">
-                              <img src="illust_gallery/jinchoge_sashie14.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie14.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="29/1">
-                              <img src="illust_gallery/jinchoge_sashie15.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie15.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="31/1">
-                              <img src="illust_gallery/jinchoge_sashie16.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie16.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="33/1">
-                              <img src="illust_gallery/jinchoge_sashie17.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie17.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="35/1">
-                              <img src="illust_gallery/jinchoge_sashie18.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie18.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="37/1">
-                              <img src="illust_gallery/jinchoge_sashie19.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie19.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="39/1">
-                              <img src="illust_gallery/jinchoge_sashie20.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie20.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="41/1">
-                              <img src="illust_gallery/jinchoge_sashie21.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie21.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="43/1">
-                              <img src="illust_gallery/jinchoge_sashie22.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie22.jpg">
                             </a>
                           </div>
                           <div class="illust">
                             <a href="45/1">
-                              <img src="illust_gallery/jinchoge_sashie23.jpg">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie23.jpg">
                             </a>
                           </div>
                         </div>
