--- a/harapeko/index.html
+++ b/harapeko/index.html
@@ -49,7 +49,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
@@ -58,7 +58,7 @@
                           <h2 class="title">【もくじ】はらぺこ魔理沙のしあわせごはん【東方外來韋編】</h2>
                           <section class="author">
                             <div class="author_label">原作</div>
-                            <h2>東方Project　</h2>
+                            <h2>東方Project</h2>
                           </section>
                           <section class="author">
                             <div class="author_label">漫画</div>
@@ -70,10 +70,10 @@
                               <div class="title">1食目</div>
                               <div class="date">2019/10/28</div>
                             </a>
-                            <a class="read latest" href="6_5">
+                            <a class="read latest" href="7">
                               <div class="label">最新話を読む</div>
-                              <div class="title">6.5食目</div>
-                              <div class="date">2020/10/26</div>
+                              <div class="title">7食目</div>
+                              <div class="date">2020/11/30</div>
                             </a>
                           </section>
                         </div>
@@ -182,6 +182,13 @@
                             <p class="date">更新: 2020/10/26</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="7">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">7食目</h3>
+                            <p class="date">更新: 2020/11/30</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -193,7 +200,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
