--- a/harapeko_ko/index.html
+++ b/harapeko_ko/index.html
@@ -49,7 +49,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">연재</div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
@@ -70,10 +70,10 @@
                               <div class="title">1번째 식사</div>
                               <div class="date">2019/10/28</div>
                             </a>
-                            <a class="read latest" href="6_5">
+                            <a class="read latest" href="7">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">6.5번째 식사</div>
-                              <div class="date">2020/10/26</div>
+                              <div class="title">7번째 식사</div>
+                              <div class="date">2020/11/30</div>
                             </a>
                           </section>
                         </div>
@@ -182,6 +182,13 @@
                             <p class="date">갱신: 2020/10/26</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="7">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">7번째 식사</h3>
+                            <p class="date">갱신: 2020/11/30</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -193,7 +200,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
