--- a/ningentachinogensoukyou/index.html
+++ b/ningentachinogensoukyou/index.html
@@ -49,7 +49,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
@@ -70,10 +70,10 @@
                               <div class="title">第一話 死合わせなら手を叩こう</div>
                               <div class="date">2019/11/25</div>
                             </a>
-                            <a class="read latest" href="12">
+                            <a class="read latest" href="13">
                               <div class="label">最新話を読む</div>
-                              <div class="title">第十二話 巻帙の夢 前編</div>
-                              <div class="date">2020/10/26</div>
+                              <div class="title">第十三話 巻帙の夢 後編</div>
+                              <div class="date">2020/11/30</div>
                             </a>
                           </section>
                         </div>
@@ -199,6 +199,13 @@
                             <p class="date">更新: 2020/10/26</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="13">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第十三話 巻帙の夢 後編</h3>
+                            <p class="date">更新: 2020/11/30</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -210,7 +217,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
