--- a/ningentachinogensoukyou_ko/index.html
+++ b/ningentachinogensoukyou_ko/index.html
@@ -49,7 +49,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">연재</div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
@@ -70,10 +70,10 @@
                               <div class="title">제1화 불행복하다면 손뼉을 쳐라</div>
                               <div class="date">2019/11/25</div>
                             </a>
-                            <a class="read latest" href="12">
+                            <a class="read latest" href="13">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">제12화 서책의 꿈 전편</div>
-                              <div class="date">2020/10/26</div>
+                              <div class="title">제13화 서책의 꿈 후편</div>
+                              <div class="date">2020/11/30</div>
                             </a>
                           </section>
                         </div>
@@ -199,6 +199,13 @@
                             <p class="date">갱신: 2020/10/26</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="13">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">제13화 서책의 꿈 후편</h3>
+                            <p class="date">갱신: 2020/11/30</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -210,7 +217,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/10/26</div>
+                            <div class="date">2020/11/30</div>
                           </div>
                         </div>
                       </div>
