로고, 파비콘

--- a/youseijinchouge_ko/1/index.html
+++ b/youseijinchouge_ko/1/index.html
@@ -21,7 +21,7 @@
           <nav>
             <div class="main_header">
               <a href="https://ko.touhougarakuta.com/">
-                <img src="/saoow.github.io/logo-1.0.0.png" style="height:25px;" alt="동방가라쿠타총지 〜strange article of the outer world〜">
+                <img src="/saoow.github.io/logo-1.0.0_ko.png" style="height:25px;" alt="동방가라쿠타총지 〜strange article of the outer world〜">
               </a>
             </div>
           </nav>
