--- a/suichouka_ko/10/index.html
+++ b/suichouka_ko/10/index.html
@@ -30,7 +30,7 @@
           <nav>
             <div class="main_header">
               <a aria-current="page" class="" href="/saoow.github.io/">
-                <img src="/saoow.github.io/logo-1.0.0.png" style="height:25px" alt="동방가라쿠타총지 〜strange article of the outer world〜">
+                <img src="/saoow.github.io/logo-1.0.0_ko.png" style="height:25px" alt="동방가라쿠타총지 〜strange article of the outer world〜">
               </a>
             </div>
           </nav>
