--- a/iedechu_ko/index.html
+++ b/iedechu_ko/index.html
@@ -121,7 +121,7 @@
                         <h3>줄거리</h3>
                         <div>
                           <div class="about_text">
-                            <p>사나에가 산에 있는 신사에서 가출을!? 갈 곳은 있을까, 무녀 일은 계속 할까? 그리고 모리야 신사에 남겨진 신들은……? 처음으로 본가를 나선 현신계 JK 사나에 씨. 딱히 긴장감이 없는 내일은 어느 쪽인가.</p>
+                            <p>사나에가 산에 있는 신사에서 가출을!? 갈 곳은 있을까, 무녀 일은 계속 할까? 그리고 모리야 신사에 남겨진 신들은……? 처음으로 본가를 나선 현신계 JK 사나에 씨. 딱히 긴장감이 없는 내일은 어디로 가는가.</p>
                           </div>
                         </div>
                       </section>
