--- a/kirenuhai/index.html
+++ b/kirenuhai/index.html
@@ -36,7 +36,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">目次</div>
-                            <div class="date">2020/12/07</div>
+                            <div class="date">2020/12/14</div>
                           </div>
                         </div>
                       </div>
@@ -113,10 +113,10 @@
                               <div class="title">第１話（1/3）</div>
                               <div class="date">2020/11/30</div>
                             </a>
-                            <a class="read latest" href="1_2">
+                            <a class="read latest" href="1_3">
                               <div class="label">最新話を読む</div>
-                              <div class="title">第１話（2/3）</div>
-                              <div class="date">2020/12/07</div>
+                              <div class="title">第１話（3/3）</div>
+                              <div class="date">2020/12/14</div>
                             </a>
                           </section>
                         </div>
@@ -172,6 +172,13 @@
                             <p class="date">更新: 2020/12/07</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="1_3">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第１話（3/3）</h3>
+                            <p class="date">更新: 2020/12/14</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -183,7 +190,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/12/07</div>
+                            <div class="date">2020/12/14</div>
                           </div>
                         </div>
                       </div>
