--- a/youseijinchouge/index.html
+++ b/youseijinchouge/index.html
@@ -35,7 +35,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">目次</div>
-                            <div class="date">2020/11/20</div>
+                            <div class="date">2020/12/11</div>
                           </div>
                         </div>
                       </div>
@@ -108,10 +108,10 @@
                               <div class="title">亡霊</div>
                               <div class="date">2019/10/04</div>
                             </a>
-                            <a class="read latest" href="46">
+                            <a class="read latest" href="47">
                               <div class="label">最新話を読む</div>
-                              <div class="title">相撃</div>
-                              <div class="date">2020/11/20</div>
+                              <div class="title">氷壁</div>
+                              <div class="date">2020/12/11</div>
                             </a>
                           </section>
                         </div>
@@ -448,6 +448,13 @@
                             <p class="date">更新: 2020/11/20</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="47">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">氷壁</h3>
+                            <p class="date">更新: 2020/12/11</p>
+                          </div>
+                        </a>
                       </section>
                       <section class="garelly">
                         <h3>イラストギャラリー</h3>
@@ -567,6 +574,11 @@
                               <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie23.jpg">
                             </a>
                           </div>
+                          <div class="illust">
+                            <a href="47/1">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie24.jpg">
+                            </a>
+                          </div>
                         </div>
                       </section>
                     </article>
@@ -579,7 +591,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2019/10/04</div>
+                            <div class="date">2019/12/11</div>
                           </div>
                         </div>
                       </div>
