--- a/kirenuhai_ko/2_1/index.html
+++ b/kirenuhai_ko/2_1/index.html
@@ -121,7 +121,7 @@
                     <section class="chapter">
                       <h2>버리지 못할 패 따위 별로 없다! 제2화（1/3）【동방외래위편】</h2>
                     </section>
-                    <a class="comic-walker" href="https://comic-walker.com/contents/detail/KDCW_AM21201997010000_68/" target="_blank" rel="noopener">Comic Walkerで読む</a>
+                    <a class="comic-walker" href="https://comic-walker.com/contents/detail/KDCW_AM21201997010000_68/" target="_blank" rel="noopener">Comic Walker에서 읽기</a>
                   </div>
                 </section>
                 <section class="free_entry">
