--- a/kirenuhai_ko/index.html
+++ b/kirenuhai_ko/index.html
@@ -37,7 +37,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">목차</div>
-                            <div class="date">2020/12/28</div>
+                            <div class="date">2021/01/04</div>
                           </div>
                         </div>
                       </div>
@@ -114,10 +114,10 @@
                               <div class="title">제1화（1/3）</div>
                               <div class="date">2020/11/30</div>
                             </a>
-                            <a class="read latest" href="2_1">
+                            <a class="read latest" href="2_2">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">제2화（1/3）</div>
-                              <div class="date">2020/12/28</div>
+                              <div class="title">제2화（2/3）</div>
+                              <div class="date">2021/01/04</div>
                             </a>
                           </section>
                         </div>
@@ -187,6 +187,13 @@
                             <p class="date">갱신: 2020/12/28</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="2_2">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">제2화（2/3）</h3>
+                            <p class="date">갱신: 2021/01/04</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -198,7 +205,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/12/28</div>
+                            <div class="date">2021/01/04</div>
                           </div>
                         </div>
                       </div>
