--- a/iedechu_ko/index.html
+++ b/iedechu_ko/index.html
@@ -37,7 +37,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">목차</div>
-                            <div class="date">2020/12/28</div>
+                            <div class="date">2021/01/25</div>
                           </div>
                         </div>
                       </div>
@@ -110,10 +110,10 @@
                               <div class="title">제1화（전・후편）</div>
                               <div class="date">2020/11/30</div>
                             </a>
-                            <a class="read latest" href="2a">
+                            <a class="read latest" href="2b">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">제2화（전편） 사나에 씨, 메이드가 되다</div>
-                              <div class="date">2020/12/28</div>
+                              <div class="title">제2화（후편） 사나에 씨, 과하다</div>
+                              <div class="date">2021/01/25</div>
                             </a>
                           </section>
                         </div>
@@ -180,6 +180,13 @@
                             <p class="date">갱신: 2020/12/28</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="2b">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">제2화（후편） 사나에 씨, 과하다</h3>
+                            <p class="date">갱신: 2021/01/25</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -191,7 +198,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/12/28</div>
+                            <div class="date">2021/01/25</div>
                           </div>
                         </div>
                       </div>
