--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/12/28</div>
+                              <div class="date">2021/01/25</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -138,7 +138,7 @@
                               <img src="9833516.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】인간들의 환상향【동방외래위편】</h3>
-                            <h2 class="title">제14화 샛별이 날아와 전편</h2>
+                            <h2 class="title">제15화 샛별이 날아와 후편</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="iedechu_ko">
@@ -148,7 +148,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/12/28</div>
+                              <div class="date">2021/01/25</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -156,7 +156,7 @@
                               <img src="11002548.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】사나에 씨는 가출중!【동방외래위편】</h3>
-                            <h2 class="title">제2화（전편） 사나에 씨, 메이드가 되다</h2>
+                            <h2 class="title">제2화（후편） 사나에 씨, 과하다</h2>
                           </div>
                         </a>
                       </div>
@@ -466,7 +466,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">만화</div>
-                                <div class="date">2020/12/28</div>
+                                <div class="date">2021/01/25</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -474,7 +474,7 @@
                                 <img src="9833516.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】인간들의 환상향【동방외래위편】</h3>
-                              <h2 class="title">제14화 샛별이 날아와 전편</h2>
+                              <h2 class="title">제15화 샛별이 날아와 후편</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="iedechu_ko">
@@ -484,7 +484,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">만화</div>
-                                <div class="date">2020/12/28</div>
+                                <div class="date">2021/01/25</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -492,7 +492,7 @@
                                 <img src="11002548.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】사나에 씨는 가출중!【동방외래위편】</h3>
-                              <h2 class="title">제2화（전편） 사나에 씨, 메이드가 되다</h2>
+                              <h2 class="title">제2화（후편） 사나에 씨, 과하다</h2>
                             </div>
                           </a>
                         </div>
