--- a/ningentachinogensoukyou_ko/index.html
+++ b/ningentachinogensoukyou_ko/index.html
@@ -49,7 +49,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">연재</div>
-                            <div class="date">2020/12/28</div>
+                            <div class="date">2021/01/25</div>
                           </div>
                         </div>
                       </div>
@@ -70,10 +70,10 @@
                               <div class="title">제1화 불행복하다면 손뼉을 쳐라</div>
                               <div class="date">2019/11/25</div>
                             </a>
-                            <a class="read latest" href="14">
+                            <a class="read latest" href="15">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">제14화 샛별이 날아와 전편</div>
-                              <div class="date">2020/12/28</div>
+                              <div class="title">제15화 샛별이 날아와 후편</div>
+                              <div class="date">2021/01/25</div>
                             </a>
                           </section>
                         </div>
@@ -213,6 +213,13 @@
                             <p class="date">갱신: 2020/12/28</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="15">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">제15화 샛별이 날아와 후편</h3>
+                            <p class="date">갱신: 2021/01/25</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -224,7 +231,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/12/28</div>
+                            <div class="date">2021/01/25</div>
                           </div>
                         </div>
                       </div>
