--- a/kirenuhai/index.html
+++ b/kirenuhai/index.html
@@ -37,7 +37,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">目次</div>
-                            <div class="date">2021/01/25</div>
+                            <div class="date">2021/02/08</div>
                           </div>
                         </div>
                       </div>
@@ -114,10 +114,10 @@
                               <div class="title">第１話（1/3）</div>
                               <div class="date">2020/11/30</div>
                             </a>
-                            <a class="read latest" href="3_1">
+                            <a class="read latest" href="3_3">
                               <div class="label">最新話を読む</div>
-                              <div class="title">第３話（1/3）</div>
-                              <div class="date">2021/01/25</div>
+                              <div class="title">第３話（3/3）</div>
+                              <div class="date">2021/02/08</div>
                             </a>
                           </section>
                         </div>
@@ -208,6 +208,20 @@
                             <p class="date">更新: 2021/01/25</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="3_2">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第３話（2/3）</h3>
+                            <p class="date">更新: 2021/02/01</p>
+                          </div>
+                        </a>
+                        <a class="chapter_card" href="3_3">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第３話（3/3）</h3>
+                            <p class="date">更新: 2021/02/08</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -219,7 +233,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2021/01/25</div>
+                            <div class="date">2021/02/08</div>
                           </div>
                         </div>
                       </div>
