--- a/youseijinchouge/index.html
+++ b/youseijinchouge/index.html
@@ -35,7 +35,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">目次</div>
-                            <div class="date">2021/01/22</div>
+                            <div class="date">2021/02/05</div>
                           </div>
                         </div>
                       </div>
@@ -108,10 +108,10 @@
                               <div class="title">亡霊</div>
                               <div class="date">2019/10/04</div>
                             </a>
-                            <a class="read latest" href="51">
+                            <a class="read latest" href="52">
                               <div class="label">最新話を読む</div>
-                              <div class="title">会談</div>
-                              <div class="date">2021/01/22</div>
+                              <div class="title">因果</div>
+                              <div class="date">2021/02/05</div>
                             </a>
                           </section>
                         </div>
@@ -483,6 +483,13 @@
                             <p class="date">更新: 2021/01/22</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="52">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第52回 因果</h3>
+                            <p class="date">更新: 2021/02/05</p>
+                          </div>
+                        </a>
                       </section>
                       <section class="garelly">
                         <h3>イラストギャラリー</h3>
@@ -629,7 +636,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2021/01/22</div>
+                            <div class="date">2021/02/05</div>
                           </div>
                         </div>
                       </div>
