--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">만화</div>
-                            <div class="date">2020/12/26</div>
+                            <div class="date">2021/02/26</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                           <div class="content_info">
@@ -116,7 +116,7 @@
                               <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】동방취접화 ~ 로터스 이터들의 취성【월간 콤프에이스】</h3>
-                            <h2 class="title">제13화 술은 오니가 내린 아름다운 선물이니 ≪전편≫</h2>
+                            <h2 class="title">제14화 술은 오니가 내린 아름다운 선물이니 ≪중편≫</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="ningentachinogensoukyou_ko">
@@ -257,7 +257,7 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">漫画</div>
-                            <div class="date">2020/12/26</div>
+                            <div class="date">2021/02/26</div>
                               <div class="official_tag official_article">official</div>
                           </div>
                           <div class="content_info">
@@ -265,7 +265,7 @@
                               <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】東方酔蝶華　〜 ロータスイーター達の酔醒【月刊コンプエース】</h3>
-                            <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第13話　酒は鬼の美禄　≪前編≫【月刊コンプエース】</h2>
+                            <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第14話　酒は鬼の美禄　≪中編≫【月刊コンプエース】</h2>
                           </div>
                         </a>
                         <a class="half_card official" href="sangetsusei_s1">
@@ -275,7 +275,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2021/01/26</div>
+                              <div class="date">2021/02/26</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                           </div>
@@ -284,7 +284,7 @@
                               <img src="4c9cc09e391f03356688db9f62066618.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】東方三月精　〜 Strange and Bright Nature Deity.【月刊コンプエース】</h3>
-                            <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第13話　嵐の勁妖　後編【月刊コンプエース】</h2>
+                            <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第15話　天体の悪魔と神　前編【月刊コンプエース】</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="ningentachinogensoukyou">
@@ -444,7 +444,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/12/26</div>
+                              <div class="date">2021/02/26</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                             <div class="content_info">
@@ -452,7 +452,7 @@
                                 <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】동방취접화 ~ 로터스 이터들의 취성【월간 콤프에이스】</h3>
-                              <h2 class="title">제13화 술은 오니가 내린 아름다운 선물이니 ≪전편≫</h2>
+                              <h2 class="title">제14화 술은 오니가 내린 아름다운 선물이니 ≪중편≫</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="ningentachinogensoukyou_ko">
@@ -590,7 +590,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2020/12/26</div>
+                              <div class="date">2021/02/26</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                             <div class="content_info">
@@ -598,7 +598,7 @@
                                 <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】東方酔蝶華　〜 ロータスイーター達の酔醒【月刊コンプエース】</h3>
-                              <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第13話　酒は鬼の美禄　≪前編≫【月刊コンプエース】</h2>
+                              <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第14話　酒は鬼の美禄　≪中編≫【月刊コンプエース】</h2>
                             </div>
                           </a>
                           <a class="half_card official" href="sangetsusei_s1">
@@ -608,7 +608,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">漫画</div>
-                                <div class="date">2021/01/26</div>
+                                <div class="date">2021/02/26</div>
                                 <div class="official_tag official_article">official</div>
                               </div>
                             </div>
@@ -617,7 +617,7 @@
                                 <img src="4c9cc09e391f03356688db9f62066618.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】東方三月精　〜 Strange and Bright Nature Deity.【月刊コンプエース】</h3>
-                              <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第13話　嵐の勁妖　後編【月刊コンプエース】</h2>
+                              <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第15話　天体の悪魔と神　前編【月刊コンプエース】</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="ningentachinogensoukyou">
