--- a/sangetsusei_s1/index.html
+++ b/sangetsusei_s1/index.html
@@ -45,7 +45,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2021/01/26</div>
+                            <div class="date">2021/02/26</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
@@ -67,10 +67,10 @@
                               <div class="title">第１話　梅雨の別荘</div>
                               <div class="date">2019/12/26</div>
                             </a>
-                            <a class="read latest" href="14">
+                            <a class="read latest" href="15">
                               <div class="label">最新話を読む</div>
-                              <div class="title">第13話　嵐の勁妖　後編</div>
-                              <div class="date">2021/01/26</div>
+                              <div class="title">第15話　天体の悪魔と神　前編</div>
+                              <div class="date">2021/02/26</div>
                             </a>
                           </section>
                         </div>
@@ -180,8 +180,15 @@
                         <a class="chapter_card" href="14">
                           <div class="content_info">
                             <p class="count"></p>
-                            <h3 class="title">第13話　嵐の勁妖　後編</h3>
+                            <h3 class="title">第14話　嵐の勁妖　後編</h3>
                             <p class="date">更新: 2021/01/26</p>
+                          </div>
+                        </a>
+                        <a class="chapter_card" href="15">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第15話　天体の悪魔と神　前編</h3>
+                            <p class="date">更新: 2021/02/26</p>
                           </div>
                         </a>
                       </section>
@@ -195,7 +202,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2021/01/26</div>
+                            <div class="date">2021/02/26</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
