--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">만화</div>
-                            <div class="date">2021/03/01</div>
+                            <div class="date">2021/03/08</div>
                           </div>
                           <div class="content_info">
                             <div class="top_image">
                               <img src="11002693.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】버리지 못할 패 따위 별로 없다!【동방외래위편】</h3>
-                            <h2 class="title">제4화（2/3）</h2>
+                            <h2 class="title">제4화（3/3）</h2>
                           </div>
                         </a>
                       </div>
@@ -337,7 +337,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2021/03/01</div>
+                              <div class="date">2021/03/08</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -345,7 +345,7 @@
                               <img src="11002693.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】切れぬ牌などあんまりない！【東方外來韋編】</h3>
-                            <h2 class="title">切れぬ牌などあんまりない！　第４話（2/3）【東方外來韋編】</h2>
+                            <h2 class="title">切れぬ牌などあんまりない！　第４話（3/3）【東方外來韋編】</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="youseijinchouge">
@@ -355,7 +355,7 @@
                                 <img src="/saoow.github.io/icon_menu_novel-1.0.0.png">
                               </div>
                               <div class="genre_title">小説</div>
-                              <div class="date">2021/02/19</div>
+                              <div class="date">2021/03/05</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -363,7 +363,7 @@
                               <img src="yousei_cover2.jpg" alt="">
                             </div>
                             <h3 class="series">【連載】妖世刃弔華</h3>
-                            <h2 class="title">妖世刃弔華【第54回 錯誤】</h2>
+                            <h2 class="title">妖世刃弔華【第55回 ９時】</h2>
                           </div>
                         </a>
                       </div>
@@ -508,14 +508,14 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2021/03/01</div>
+                              <div class="date">2021/03/08</div>
                             </div>
                             <div class="content_info">
                               <div class="top_image">
                                 <img src="11002693.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】버리지 못할 패 따위 별로 없다!【동방외래위편】</h3>
-                              <h2 class="title">제4화（2/3）</h2>
+                              <h2 class="title">제4화（3/3）</h2>
                             </div>
                           </a>
                         </div>
@@ -672,7 +672,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">漫画</div>
-                                <div class="date">2021/03/01</div>
+                                <div class="date">2021/03/08</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -680,7 +680,7 @@
                                 <img src="11002693.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】切れぬ牌などあんまりない！【東方外來韋編】</h3>
-                              <h2 class="title">切れぬ牌などあんまりない！　第４話（2/3）【東方外來韋編】</h2>
+                              <h2 class="title">切れぬ牌などあんまりない！　第４話（3/3）【東方外來韋編】</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="youseijinchouge">
@@ -690,7 +690,7 @@
                                   <img src="/saoow.github.io/icon_menu_novel-1.0.0.png">
                                 </div>
                                 <div class="genre_title">小説</div>
-                                <div class="date">2021/02/19</div>
+                                <div class="date">2021/03/05</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -698,7 +698,7 @@
                                 <img src="yousei_cover2.jpg" alt="">
                               </div>
                               <h3 class="series">【連載】妖世刃弔華</h3>
-                              <h2 class="title">妖世刃弔華【第54回 錯誤】</h2>
+                              <h2 class="title">妖世刃弔華【第55回 ９時】</h2>
                             </div>
                           </a>
                         </div>
