--- a/youseijinchouge/index.html
+++ b/youseijinchouge/index.html
@@ -35,7 +35,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">目次</div>
-                            <div class="date">2021/02/19</div>
+                            <div class="date">2021/03/05</div>
                           </div>
                         </div>
                       </div>
@@ -108,10 +108,10 @@
                               <div class="title">亡霊</div>
                               <div class="date">2019/10/04</div>
                             </a>
-                            <a class="read latest" href="54">
+                            <a class="read latest" href="55">
                               <div class="label">最新話を読む</div>
-                              <div class="title">錯誤</div>
-                              <div class="date">2021/02/19</div>
+                              <div class="title">９時</div>
+                              <div class="date">2021/03/05</div>
                             </a>
                           </section>
                         </div>
@@ -504,6 +504,13 @@
                             <p class="date">更新: 2021/02/19</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="55">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第55回 ９時</h3>
+                            <p class="date">更新: 2021/03/05</p>
+                          </div>
+                        </a>
                       </section>
                       <section class="garelly">
                         <h3>イラストギャラリー</h3>
@@ -643,6 +650,11 @@
                               <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie27.jpg">
                             </a>
                           </div>
+                          <div class="illust">
+                            <a href="55/1">
+                              <img src="/saoow.github.io/youseijinchouge/illust_gallery/jinchoge_sashie28.jpg">
+                            </a>
+                          </div>
                         </div>
                       </section>
                     </article>
@@ -655,7 +667,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2021/02/19</div>
+                            <div class="date">2021/03/05</div>
                           </div>
                         </div>
                       </div>
